# c64-go

./: Makefile  README.md  c64_20190221.fw  component.mk  partitions.csv  sdkconfig
main/: FrodoGo_main.c  component.mk
main/frodo/: 1541d64.cpp  1541d64.h  1541fs.cpp  1541fs.h  1541job.cpp  1541job.h  1541t64.cpp  1541t64.h  C64.cpp  C64.h  C64_ESP32.i  C64_PC.cpp  C64_SC.cpp  CIA.cpp  CIA.h  CIA_SC.cpp  CPU1541.cpp  CPU1541.h  CPU1541_PC.cpp  CPU1541_SC.cpp  CPUC64.cpp  CPUC64.h  CPUC64_PC.cpp  CPUC64_SC.cpp  CPU_common.cpp  CPU_common.h  CPU_emulcycle.i  CPU_emulline.i  CmdPipe.cpp  CmdPipe.h  Display.cpp  Display.h  Display_ESP32.i  FixPoint.i  FrodoHeaders.pch++  FrodoPCHeaders.pch++  FrodoSCHeaders.pch++  IEC.cpp  IEC.h  Prefs.cpp  (+45 more)
main/minIni/: component.mk  minGlue.h  minIni.c
main/odroid-go-common/: component.mk  odroid_audio.c  odroid_audio.h  odroid_display.c  odroid_display.h  odroid_input.h  odroid_sdcard.c  odroid_settings.c  odroid_settings.h  odroid_system.h
main/odroidGo/: C64wrapper.cpp  LibOdroidGo.c  LibOdroidGo.h  Menu.c  Multiplayer.c  build_defs.h  component.mk  files.c  keyboard.h  menuWheel.h
main/ugui/: component.mk  ugui.c  ugui.h  ugui_config.h
main/utils/: component.mk  utils.c  utils.h
res/: tile.raw
